# python-outlier-detection

./: Makefile  README.md  pyproject.toml
notebooks/: timeseries.ipynb  z-score.ipynb
